fixed overflow scroll

--- a/css/yrwin-marcs-portfolio-website.webflow.css
+++ b/css/yrwin-marcs-portfolio-website.webflow.css
@@ -23,6 +23,7 @@
 }
 
 body {
+  overflow: scroll !important;
   color: #1a1b1f;
   font-family: Montserrat, sans-serif;
   font-size: 16px;
